--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -1,4 +1,9 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/11.jpg" title="头条"></a><a href="https://github.com/rmxaqt314/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/rmxaqt314/www/master/t/djy/13.jpg" title="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/rmxaqt314/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/rmxaqt314/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rmxaqt314/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/rmxaqt314/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12520973.md#1" target="_blank">【名家专栏】凯恩斯幽灵在经济学界萦绕不散</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12520973.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/Keynes_1933-150x120.jpg" align ="left"></a>退休政治经济学者保罗?戴维森（Paul Davidson）在他的新书里提出了一个问题：谁会害怕约翰?梅纳德?凯恩斯（John Maynard Keynes）？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月04日 2:04 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/31/n12516026.md#1" target="_blank">【名家专栏】美大选后 如何恢复公民社会秩序</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/10/31/n12516026.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-152418700-1-700x420-150x120.jpg" align ="left"></a>即使以历史标准衡量，今年也是不同寻常。我们没有像1967年那样在美国城市的街道上部署任何坦克，但是从5月到8月间，“安提法”和“黑人的命也是命”组织气焰嚣张，不时地制造街头暴力，让几乎所有人感到不安，有些人开始思考，我们是否正在看到美国的崩溃。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 6:38 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12520590.md#1" target="_blank">钟原：美大选关键时刻 中共党媒报导淡化处理</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12520590.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1283442249-150x120.jpg" align ="left"></a>10月25日，新华社曾连发两条美国大选的报导，一条还放在首页醒目位置，但避谈拜登丑闻。10月26日，中共召开十九届五中全会，中共党媒停止报导美国大选，显然中共高层再没有精力审核相关报导内容，美国选举形势也很不如中共的愿望，还牵涉到中共腐败渗透，干脆就不报导了。
+
+10月29日，新华社再次报导美国大选，却没有出现在首.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 2:12 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521559.md#1" target="_blank">王君：和平谈判证明美国没有侵略中国的战略</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521559.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/Korean_War_Montage_2-600x350-150x120.png" align ="left"></a>1950年6月25日， 北朝鲜军队突然发动了入侵韩国的战争。1950年7月7日，联合国通过第84号决议案。苏联拥有一票否决权。按照正常人的思维和正常国家处理问题的方式，为了自己的共产国际小兄弟朝鲜和中国、为了自己国家，无论哪一方面，无论是什么立场，无论从哪一个角度，苏联都应该挺身而出，阻止联合国出兵。可是，苏联缺席了.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 2:09 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521159.md#1" target="_blank">王友群：习近平为什么抓捕叶简明？</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521159.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/dc2d2a3187e1d5fe56d9d6441d88d339-600x400-150x120.jpg" align ="left"></a>最近，中国华信集团老板叶简明与美国民主党总统候选人拜登家族“交易”的新闻，轰动美国与世界。
 
@@ -24,9 +29,7 @@
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12518149.md#1" target="_blank">袁斌：中共“双阴”新规令海外华人归国无期？</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12518149.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/02/GettyImages2-1196292480-150x120.jpg" align ="left"></a>疫情蔓延全球后，海外华人曾自嘲“中国人打上半场，外国人打下半场，我们打满全场”，希望“不要打加时赛”，但中共近日推出的“双阴性证明”新规，却令他们的回国之路突然变得遥遥无期。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 2:09 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518398.md#1" target="_blank">【名家专栏】美大选 为美利坚政权最后申辩</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518398.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/usa-1561757_1920-web-150x120.jpg" align ="left"></a>在这场至关重要的选举中，相当大比例的美国人已经早早地投票了，这让两种理念开始对阵：一种是根本上的美国式的治国理念，另一种是根本上的无政府混乱的造反主义理念。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 12:23 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12518378.md#1" target="_blank">【名家专栏】为何拜登永不会成所有美国人总统</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12518378.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229328400-1200x800-1-150x120.jpg" align ="left"></a>乔?拜登在多个场合向我们保证，如果他获胜，他将成为所有美国人的总统，包括那些没有投票给他的人。这是不可能的，这不仅是另一个“亮丽的谎言”，我们已经可悲地习惯了这种谎言。这绝对荒谬，突出了一个真实的美国悲剧。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 11:24 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518581.md#1" target="_blank">佳月：“川普2020”是一场世界运动</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518581.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1229278803-150x120.jpg" align ="left"></a>今天是2020年11月1日，星期日。距离美国大选衹剩两天。美国人民屏住呼吸在等待大选结果，更确切地说，整个世界都在等待着这场大选的结果。因为这场大选不是川普与拜登个人之间的选择，这是一场正义与邪恶，民主与专制，资本主义与共产主义之间的较量。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 10:05 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/7/15/n10564808.md#1" target="_blank">魔鬼在统治着我们的世界(19)：教育篇(下)</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/18/7/15/n10564808.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/07/fbc36dcdd8bda3b2be91d11c498872eb-150x120.jpg" align ="left"></a>在教育领域，虽然共产邪灵下手最狠的地方是大学，但它并没有放松对中小学的侵蚀。它采用各种狡猾的手段把学生变坏、变傻，为进一步在大学里给他们洗脑做准备。把一代一代学生变得知识越来越贫乏、思维能力越来越差，这个过程历时百年，其始作俑者是杜威领导的进步主义教育运动，其后的一波波教育改革大多没有脱离进步主义教育的藩篱。除了给学生.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 9:30 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517641.md#1" target="_blank">【名家专栏】美媒报导政治事件中的幕后交易</a><br></h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/1/n12517641.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/hunter-joe-biden-1200x807-150x120.jpg" align ="left"></a>《纽约邮报》和《福克斯新闻》是唯一深入调查笔记本电脑故事的媒体，据报导，联邦调查局已经获得了这台电脑，并且显然正在调查中。参议院委员会计划举行听证会。随着选举的临近，主流媒体为什么不按常理马上报导这个故事呢？我闻到了幕后交易的味道。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 8:45 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12522760.md#1" target="_blank">夏林：略谈 《纽时》文章</a><br></h3>当我看到《纽约时报》的文章标题 “大纪元：从反华小报到右翼影响力机器”，我以为我看到了《人民日报》海外版文章。“反华”，这不是中共党文化的专用词汇吗？而且谁让中共不爽，无论是《大纪元》，还是美国国务卿蓬佩奥，都被中共的新华社、《人民日报》、CCTV等官媒扣上这顶帽子。没想到在美国的《纽约时报》，也拷贝复制了这个党文化词.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月04日 12:23 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12521064.md#1" target="_blank">袁斌：中共早期农民运动“好得很”？</a><br></h3>随着北伐的胜利进军，中共早期的农运中心很快由广东的陆海丰转移到了湖南。到1926年11月底，湖南全省已有54个县建立农民协会，会员从北伐前的40万上升为107万；到1927年1月，会员又激增至200万。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 11:40 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/3/n12520988.md#1" target="_blank">读者投书：曝光青岛市的黑暗和邪恶</a><br></h3>青岛市这些年一直是靠谎言及涉黑人员统治,但是表面却又以各种各样的伪善伪装,高举依法治国实际上带头违法,青岛市每一件冤假错案几乎都是政府人员人为造成的,仅举几个例子：......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 9:03 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12520835.md#1" target="_blank">向真：共产主义阴影下 人民的自救之道</a><br></h3>每年的十一月七日，是“共产主义受害者纪念日”。去年该日，美国白宫发表川普总统的声明说：“在这一天，我们铭记一亿多因为共产主义压迫而死去的人们。今天，我们重申致力于基于民主、自由、正义和对每个人生命价值的深切尊重基础上，帮助所有人确保和平与繁荣的未来。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 7:34 AM			</td></tr>
@@ -35,6 +38,5 @@
 犬儒溜须无人管，拟将清华变帝姓。
 爱国撕裂普世情，仇恨入骨党妈亲；
 归国不得粉红愁，留的委曲隔海倾。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 10:09 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/20/11/2/n12518573.md#1" target="_blank">邢天行：川普一个尚未兑现的承诺背后的较量</a><br></h3>川普在2016年参选前，承诺的许多事情都做了，比如：建边境墙、减税、增加就业、公平贸易等等。只有一件重大诺言看来是无法实现了，这就是前国务卿希拉里电邮门丑闻爆出后，川普一直宣称要把希拉里送进监狱，这也是希拉里反对派的汹涌民意。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 9:59 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/rmxaqt314/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/rmxaqt314/djy/blob/master/gb/news392_2.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rmxaqt314/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news392_2.htm">https://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://github.com/rmxaqt314/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
